JWT update